# python-package-template

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: build_publish_pip_setuptools.yml  build_publish_pixi_hatchling.yml
examples/: basic-usage.py
src/regressor/: __init__.py  fit.py  simulate.py
tests/: test-fit.py  test-simulate.py
