[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regressor"
version = "0.1.0"
description = "A simple package for simulating and fitting regression data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/regressor"
"Bug Tracker" = "https://github.com/yourusername/regressor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/regressor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

# Pixi configuration
[tool.pixi.project]
# Pixi will already read name, version, description from [project]

[tool.pixi.dependencies]
python = ">=3.8"
# Core dependencies will be read from [project.dependencies]

[tool.pixi.environments]
dev = ["python=3.10", "numpy", "scipy", "matplotlib", "pytest", "pytest-cov", "black", "isort", "mypy"]
test = ["python=3.10", "numpy", "scipy", "matplotlib", "pytest", "pytest-cov"]
prod = ["python=3.10", "numpy", "scipy", "matplotlib"]

[tool.pixi.tasks]
test = "pytest tests/ --cov=regressor"
lint = "black src/ tests/ && isort src/ tests/"
type-check = "mypy src/"
format = { depends = ["lint"] }
validate = { depends = ["test", "lint", "type-check"] }
