[project]
dependencies = ["rich"]                               
name = "matsengrp_rich_example"
requires-python = ">= 3.11"
scripts = { rich-example-main = "rich_example:main" } 
version = "0.1.0"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace] 
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies] 
rich_example = { path = "." }

[tool.pixi.tasks] 
start = "rich-example-main"

[tool.pixi.package]  # this could also be ... features.default ?
name = "matsengrp_rich_example"
version = "0.1.0"

[tool.pixi.package.build] 
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies] 
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies] 
rich = "13.9.*"
